[package]
name = "ktls"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[workspace]
members = [ "tokio-rusktls" ]

[dependencies]
libc = "0.2"
byteorder = "1"

[dev-dependencies]
webpki = "0.18"
webpki-roots = "0.15"
tokio = "0.1"
rustls = "=0.13.0"
tokio-rustls = "0.8.0-alpha"
tokio-rusktls = { path = "tokio-rusktls" }

[patch.crates-io]
tokio-rustls = { git = "https://github.com/quininer/tokio-rustls", branch = "new-api" }
rustls = { git = "https://github.com/quininer/rustls", branch = "ktls" }
