[package]
name = "ktls"
version = "0.0.1"
authors = ["quininer <quininer@live.com>"]
license = "MIT"
description = "Linux Kernel TLS for Rust."
categories = ["cryptography", "network-programming"]
keywords = ["linux", "zero-copy", "ktls"]
edition = "2018"

[workspace]
members = [ "tokio-rusktls" ]

[dependencies]
libc = "0.2"
byteorder = "1"

[dev-dependencies]
webpki = "0.18"
webpki-roots = "0.15"
tokio = "0.1"
rustls = "0.14.0"
tokio-rustls = "0.8.0"
tokio-rusktls = { version = "=0.0.1", path = "tokio-rusktls" }
tokio-linux-zio = "0.1"

[replace]
"rustls:0.14.0" = { git = "https://github.com/quininer/rustls", branch = "ktls2" }
