[package]
name = "tokio-rusktls"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
license = "MIT"
description = "Rustls + KTLS support for Tokio."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[dependencies]
libc = "0.2"
bytes = "0.4"
tokio = "0.1"
rustls = "=0.13.0"
ktls = { path = ".." }
if_chain = "0.1"
